===========================

Modified Plists:
----------------

Scripting:
----------
* World event "commsMessageReceived" will now be triggered when the
  "player.commsMessage" function is called. The "sender" argument will
  be null in this case. Scripts that implement "commsMessageReceived"
  will need to check for a null value, otherwise an error will occur.

Bug fixes:
==========

-------------------------------------------------------------------------------

Changes between Oolite 1.86 and Oolite 1.88:

General:
========
* New lighting shaders for physically accurate specular reflections
  and light energy conservation.
* Improved planet lighting to make use of the new lighting system.
* New and improved shader for rendering planets' atmospheres.
* Enabled blending when rendering visual effects for increased
  effects flexibility.
* Specular maps alpha channel can now be used for storing material
  gloss information.
* Updates to the base and shader materials system.
* Number of supported joysticks increased to 4.
* Improved flee AI.
* Energy damage is no longer applied to player occupied escape pods.
* Linux port: Added the command line argument --systemwide-directory
  to chose an installation directory other than the default /opt.
* Improved mousewheel handling. When mouse control is active,
  speed change rate corresponds to mousewheel roll rate.
* Optimization: When an entity explodes outside of its visibility
  range, it is no longer rendered.
* Added multi-page ability to primeable equipment manager.
* Windows DPI awareness applied to all monitors.
* Windows port: Ensure that, in the case of both an integrated and a
  high-performance GPU being available, the high-performance one is
  selected.

Expansion pack development:
===========================

Modified Plists:
----------------
* Introduced the gamma_correct and gloss base and shader materials keys.
* scanner_minimalistic boolean shipdata key introduced, defines a scanner
  without gridlines.
