@@ -86,7 +86,7 @@
 	<key>LSMinimumSystemVersionByArchitecture</key>
 	<dict>
 		<key>x86_64</key>
-		<string>10.6.0</string>
+		<string>10.7.0</string>
 	</dict>
 	<key>NSAppTransportSecurity</key>
 	<dict>
