@@ -3,8 +3,10 @@
 ARCHS									= x86_64
 SDKROOT									= macosx
 
-MACOSX_DEPLOYMENT_TARGET				= 10.6
+MACOSX_DEPLOYMENT_TARGET				= 10.7
 
 GCC_VERSION								= com.apple.compilers.llvm.clang.1_0
 
 CLANG_ENABLE_MODULES					= YES
+
+CLANG_CXX_LIBRARY 						= libc++
